--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(indiproperties)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 find_package(INDI REQUIRED)
+include_directories(${INDI_INCLUDE_DIR})
 add_subdirectory(src)
+add_subdirectory(test)
