--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,10 @@ if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest")
   add_executable(switch_test switch_test.cpp)
   target_link_libraries(switch_test indi_properties gtest_main indidriver)
   add_test(switch_test switch_test)
+  
+  add_executable(number_test number_test.cpp)
+  target_link_libraries(number_test indi_properties gtest_main indidriver)
+  add_test(number_test number_test)
 
   add_executable(properties_test properties_test.cpp)
   target_link_libraries(properties_test indi_properties gtest_main indidriver)
