--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,4 +13,8 @@ if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest")
   add_executable(properties_test properties_test.cpp)
   target_link_libraries(properties_test indi_properties gtest_main indidriver)
   add_test(properties_test properties_test)
+
+  add_executable(properties_map_test properties_map_test.cpp)
+  target_link_libraries(properties_map_test indi_properties gtest_main indidriver)
+  add_test(properties_map_test properties_map_test)
 endif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest")
