Enable testing only if submodule was cloned

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest")
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt")
   message("Found googletest, enabling testing")
   add_subdirectory(googletest)
   
