--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,4 +17,4 @@ if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt")
   add_executable(properties_map_test properties_map_test.cpp)
   target_link_libraries(properties_map_test indi_properties gtest_main indidriver)
   add_test(properties_map_test properties_map_test)
-endif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest")
+endif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt")
