--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(indiproperties)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 find_package(INDI REQUIRED)
-include_directories(${INDI_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/gulinux-commons/)
+set(INDI_PROPERTIES_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/gulinux-commons/ CACHE INTERNAL "INDIProperties includes")
+include_directories(${INDI_INCLUDE_DIR} ${INDI_PROPERTIES_INCLUDE_DIRS})
 add_subdirectory(src)
 add_subdirectory(test)
