--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(indi_properties STATIC switch.cpp number.cpp text.cpp)
+add_library(indi_properties STATIC switch.cpp number.cpp text.cpp blob.cpp)
 FILE(GLOB_RECURSE HEADERS "*.h")
 add_custom_target(headers SOURCES ${HEADERS})
