--- a/gulinux-commons/c++/CMakeLists.txt
+++ b/gulinux-commons/c++/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 2.8.11)
+project(GuLinux-Commons-c++)
 enable_testing()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 find_package(Boost REQUIRED)
