--- a/c++/tests/CMakeLists.txt
+++ b/c++/tests/CMakeLists.txt
@@ -1,9 +1,12 @@
-include_directories(${GTEST_INCLUDE_DIRS} ..)
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt")
+  include_directories(.. googletest/googletest/include/)
 
-add_executable(test_containers_streams test_containers_streams.cpp)
-target_link_libraries(test_containers_streams ${GTEST_BOTH_LIBRARIES})
-add_test(test_containers_streams test_containers_streams)
+  add_executable(test_containers_streams test_containers_streams.cpp)
+  target_link_libraries(test_containers_streams gtest_main)
+  add_test(test_containers_streams test_containers_streams)
 
-add_executable(test_optional test_optional.cpp)
-target_link_libraries(test_optional ${GTEST_BOTH_LIBRARIES})
-add_test(test_optional test_optional)
+  add_executable(test_optional test_optional.cpp)
+  target_link_libraries(test_optional gtest_main)
+  add_test(test_optional test_optional)
+
+endif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt")
