Switch to submodule for gulinux commons

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
 ENABLE_TESTING()
 cmake_minimum_required(VERSION 2.8.12)
 project(indiproperties)
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/gulinux-commons/cmake/")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 find_package(INDI REQUIRED)
 set(INDI_PROPERTIES_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/gulinux-commons/ CACHE INTERNAL "INDIProperties includes")
 include_directories(${INDI_INCLUDE_DIR} ${INDI_PROPERTIES_INCLUDE_DIRS})
 add_subdirectory(src)
-add_subdirectory(test)
+option(enable_INDIProperties_tests "Enable INDIProperties testing (default: Off)" Off)
+if(enable_INDIProperties_tests)
+  add_subdirectory(test)
+endif(enable_INDIProperties_tests)
