--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "test/googletest"]
 	path = test/googletest
 	url = https://github.com/google/googletest.git
+[submodule "gulinux-commons"]
+	path = gulinux-commons
+	url = https://github.com/GuLinux/GuLinux-Commons.git
